@@ -1,3 +1,6 @@
+2018-03-23 17:55:00 Alessandro De Salvo
+	* Remove stripping of locale
+
 2018-02-27 00:22:00 Alessandro De Salvo
 	* Fix for dbus machine-id
 
